# dregan-contracts

./: Anchor.toml  Cargo.toml  README.md
.github/workflows/: anchor-build-deploy.yml  build-deploy-staking.yml  deploy-nft.yml  deploy-staking.yml
nft-assets/: basic.json  elite.json  pro.json
nft-metadata/: basic.json  pro.json
programs/dregan-nft/: Anchor.toml  Cargo.toml
programs/dregan-nft/src/: lib.rs
programs/dregan-staking/: Anchor.toml  Cargo.toml
programs/dregan-staking/src/: lib.rs
