[workspace]
members = [
    "programs/dregan-nft",
    "programs/dregan-staking"
]
resolver = "2"

[patch.crates-io]
indexmap = { version = "=2.2.6" }
toml_edit = { version = "=0.20.7" }
toml_datetime = { version = "=0.6.5" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3