[package]
name = "dregan-nft"
version = "0.1.0"
description = "DREGAN NFT Access Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.1"
borsh = "1.5"
spl-token = { version = "6.0", features = ["no-entrypoint"] }