[package]
name = "dregan-nft"
version = "1.1.0"
edition = "2021"
description = "DREGAN NFT Access Control - Fixed with on-chain balance verification"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.17.28"
borsh = "0.10.3"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[features]
no-entrypoint = []
