[package]
name = "dregan-staking"
version = "0.1.0"
description = "DREGAN Staking Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0"
borsh = "1.5"
spl-token = { version = "6.0", features = ["no-entrypoint"] }