[package]
name = "dregan-staking"
version = "0.1.0"
description = "DREGAN Staking Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.18.10"
borsh = { version = "=0.10.3", features = ["derive"] }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"], default-features = false }